# ytw

./: mimari.md
backend/: main.py  pyproject.toml
backend/src/: config.py  downloader.py  schemas.py
frontend/: extractvideourl.ts  package.json  videodownloader_new.ts
frontend/src/lib/components/ui/progress/: progress.svelte
frontend/src/lib/components/ui/sonner/: sonner.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
