[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "fastnanoid>=0.4.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "yt-dlp[default]>=2025.11.12",
]
